# VacancySkillsEstimator

./: LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: utils.ipynb
src/: app.py  binary.py  clf.joblib  configuration.py  metrics.py  pdf_parsing.py  testing_modules.ipynb  tfidf_vectorizer.joblib  utils.py  utils_2.ipynb
src/shpad/: shpad.py
